可以單人借由wise server傳到Unity

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Bluetooth_rssi_postion</name>
+	<name>Wise_server_compute</name>
 	<comment></comment>
 	<projects>
 	</projects>
