--- a/.classpath
+++ b/.classpath
@@ -7,5 +7,6 @@
 	<classpathentry kind="lib" path="lib/junit.jar"/>
 	<classpathentry kind="lib" path="lib/rabbitmq-client-tests.jar"/>
 	<classpathentry kind="lib" path="lib/rabbitmq-client.jar"/>
+	<classpathentry kind="lib" path="/Users/tsai/Desktop/穿戴式/穿戴式展演資料/Wise_server_compute/lib/java-json.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
